set up html skeleton

--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" >
     <title>Unlit Found Objects?</title>
+    <!-- bring in bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href='static/styles.css'/>  
+    <link rel="stylesheet" type="text/css" media="screen" href='styles.css'/>
+    <!-- import D3 --> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script src='Data/data.js' type='text/javascript'></script>      
+    <script src='script.js' type='text/javascript'></script>
 </head>
-<body>
-        <div class="container-fluid text-left", style="background:transparent url('images/banner_image.jpg') center center ; margin-bottom:4px; padding-bottom:5px; height:150pt; width: auto;">
-            <h1 class="white_bold" >UFO? U Don't Know</h1>
+<body class='bodyMain' >
+    <div class="jumbotron text-center text-white bg-1">
+        <h1>UFO Sighting Table</h1>
+        <img src="images/banner_image.png" alt="space man" height="500pts" width='100%'>
         </div>
+    <div class="container-fluid">
+        
+    </div>
+
 </body>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
