added table placeholder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
         <img src="images/banner_image.png" alt="space man" height="500pts" width='100%'>
         </div>
     <div class="container-fluid">
-        
+        <div class="row">
+            <div class="col-md-12">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>date/time</th>
+                    <th>city</th>
+                    <th>state</th>
+                    <th>country</th>
+                    <th>shape</th>
+                    <th>duration in mins</th>
+                    <th>comments</th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
+            </div>
+          </div>
     </div>
 
 </body>
