--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
         <img src="images/banner_image.png" alt="space man" height="500pts" width='100%'>
         </div>
     <div class="container-fluid">
+        <div class='row'>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="date" placeholder="date">
+                    <input type="text" class="form-control" id="country" placeholder="country">
+                </div>
+            <div class="col-md-10">
+                <a id="search" class="btn btn-default">Search</a> 
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
               <table class="table table-striped">
