--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-              <table class="table table-striped">
+              <table class="table">
                 <thead>
                   <tr>
                     <th>date/time</th>
