added functionality to search for state

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <input type="text" class="form-control" id="date" placeholder="date">
-                    <input type="text" class="form-control" id="country" placeholder="country">
+                    <input type="text" class="form-control" id="state" placeholder="state">
                 </div>
             <div class="col-md-10">
                 <a id="search" class="btn btn-default">Search</a> 
