--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
                 <div class="form-group">
                     <input type="text" class="form-control" id="date" placeholder="date">
                     <input type="text" class="form-control" id="state" placeholder="state">
+                    <input type="text" class="form-control" id="shape" placeholder="shape">
                 </div>
-            <div class="col-md-10">
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="city" placeholder="city">
+                    <input type="text" class="form-control" id="country" placeholder="country">
+                </div>
+            </div>
+            <div class="col-md-2">
                 <a id="search" class="btn btn-default">Search</a> 
                 </div>
+            <div class="col-md-4">
+                <h3 style="font-family: 'Monospace', Lucida Console";>Search For the Truth...</h3>
+            </div>
+            <div class="col-md-2">
+                <!-- add in a picture -->
+            </div>
             </div>
         </div>
         <div class="row">
