--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" >
     <title>Unlit Found Objects?</title>
-    <!-- bring in bootstrap -->
+   <!-- bring in bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href='styles.css'/>
     <!-- import D3 --> 
@@ -44,7 +44,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-              <table class="table">
+              <table cellspacing="1" class="table" id="table_id">
                 <thead>
                   <tr>
                     <th>date/time</th>
@@ -59,15 +59,28 @@
                 <tbody>
                 </tbody>
               </table>
+              <!---nav bar-->
+              <nav aria-label="...">
+                <ul class="pager">
+                  <li><a id="previous" class="btn btn-default">Previous</a></li>
+                  <li><a id="next" class="btn btn-default">Next</a></li>
+                </ul>
+              </nav>
             </div>
           </div>
     </div>
 
 </body>
-    <script src='Data/data.js' type='text/javascript'></script>      
-    <script src='script.js' type='text/javascript'></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
+  
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+
+    <script src='Data/data.js' type='text/javascript'></script>      
+    <script src='script.js' type='text/javascript'></script>
+
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</html>
+
+    </html>
